--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "firebase": "^8.3.0",
+    "morgan": "^1.10.0",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
