--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase": "^8.3.0",
+    "firebase-admin": "^9.5.0",
     "morgan": "^1.10.0",
     "uid": "^2.0.0"
   },
